@@ -1,4 +1,5 @@
 ver 0.19 (not yet released)
+* new resampler option using libsoxr
 
 ver 0.18.5 (2013/11/23)
 * configuration
